syntax = "proto3";
 

package com.example.demo.grpc.helloworld;

message HelloRequest {
  int64 id= 1;
  string name = 2;
  string phone =3;
  bytes photo = 4;
}
 
message HelloReply {
  string message = 1;
}

 
service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}
 
